modules/cli/src/test/resources/bad/syntax/disamb/doarglistdel/DoArgList03.scr
module bad.syntax.disamb.doarglist.DoArgList03;


global protocol Foo(role A, role B)
{
	1() from A to B;
	do Bar<2()>(A, B);
}

global protocol Bar<sig M1, sig M2>(role C, role D)
{
	M1 from C to D;
	M2 from D to C;
}
